crates/daow/tests/compile_fail/no_return_type.stderr
error: DAO methods must have a return type
  --> tests/compile_fail/no_return_type.rs:27:5
   |
27 | /     #[query("SELECT * FROM recalls")]
28 | |     async fn get_all(&self);
   | |____________________________^

warning: unused imports: `Pool` and `async_trait`
  --> tests/compile_fail/no_return_type.rs:17:12
   |
17 | use daow::{async_trait, dao, Entity, Pool};
   |            ^^^^^^^^^^^               ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
